--- a/index.html
+++ b/index.html
@@ -9,12 +9,29 @@
             <h1>GMike47</h1>
             <nav>
                 <ul>
-                    <li>About me</li>
-                    <li>Projects</li>
-                    <li>Skills</li>
-                    <li>Contact me</li>
+                    <li><a href="#about me">About me</a></li>
+                    <li><a href="#projects">Projects</a></li>
+                    <li><a href="#skillz">Skills</a></li>
+                    <li><a href="#contact me">Contact me</a></li>
                 </ul>
             </nav>
         </header>
+        <section id="about me">
+            <h2>About me</h2>
+            <p>I'm fucking lovely</p>
+            <img href="./reso/sdfsdsgfdg.png">
+        </section>
+        <section id="projects">
+            <h2>Projects</h2>
+            <ul>
+                <li></li>
+            </ul>
+        </section>
+        <section id="skillz">
+
+        </section>
+        <footer id="contact me">
+            <p>Pliz don't</p>
+        </footer>
     </body>
 </html>
