made contact page, need more work

--- a/index.html
+++ b/index.html
@@ -1,37 +1,46 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link href="./style" rel="stylesheet">
-        <title>My Portfolio</title>
+        <link href="./style.css" rel="stylesheet">
+        <title>GMike47 Portfolio</title>
     </head>
     <body>
         <header>
             <h1>GMike47</h1>
-            <nav>
-                <ul>
-                    <li><a href="#about me">About me</a></li>
-                    <li><a href="#projects">Projects</a></li>
-                    <li><a href="#skillz">Skills</a></li>
-                    <li><a href="#contact me">Contact me</a></li>
-                </ul>
-            </nav>
+            <ul class="nav">
+                <li><a href="#aboutMe">About me</a></li>
+                <li><a href="#projects">Projects</a></li>
+                <li><a href="#skillz">Skills</a></li>
+                <li><a href="./contact.html">Contact me</a></li>
+            </ul>
         </header>
-        <section id="about me">
-            <h2>About me</h2>
-            <p>I'm fucking lovely</p>
-            <img href="./reso/sdfsdsgfdg.png">
+        <section id="aboutMe">
+            <div class="info">
+                <h2>About me</h2>
+                <p>I'm fucking lovely</p>
+                <p>I'm a student learning Web Development, currently learning front-end,<br> but will also learn back-end in order to become a full stack developer</p>
+            </div>
+            <img src="./reso/sdfsdsgfdg.png" alt="A picture of Vernon Dudley">
         </section>
         <section id="projects">
             <h2>Projects</h2>
             <ul>
-                <li></li>
+                <li>The Coffee Sippers</li>
+                <li>kool kidz club</li>
             </ul>
         </section>
         <section id="skillz">
-
+            <h2>skills</h2>
+            <div class="set">
+                <img src="./reso/kindpng_html.png" alt="html">
+                <img src="./reso/pngwing.com css.png" alt="css">
+                <img src="./reso/javascript_logo_icon_145155.png" alt="javascript">
+                <img src="./reso/768px-Python_icon_(black_and_white).svg.png" alt="python">
+                <img src="./reso/toppng.com-github-logo-transparent-512x512.png" alt="github">
+            </div>
         </section>
-        <footer id="contact me">
-            <p>Pliz don't</p>
-        </footer>
+        <footer id="frog">
+            <embed>
+            </footer>
     </body>
 </html>
