made copy to clipboard work

--- a/contact.html
+++ b/contact.html
@@ -3,6 +3,7 @@
     <head>
         <title>Contact GMike47</title>
         <link href="./style.css" rel="stylesheet">
+        <script src="./javascript.js"></script>
     </head>
     <body>
         <header>
@@ -14,5 +15,9 @@
                 <li><a href="./contact.html">Contact me</a></li>
             </ul>
         </header>
+        <footer id="contact">
+            <h2>Contact Me</h2>
+            <img onclick = copyToClipboard() class="mail" src="./reso/kindpng_498418.png" title="click here to get my mail" alt="Email me  @gmail.com">
+        </footer>
     </body>
 </html>
