made getday gif work, yay

--- a/index.html
+++ b/index.html
@@ -39,8 +39,9 @@
                 <img src="./reso/toppng.com-github-logo-transparent-512x512.png" alt="github">
             </div>
         </section>
-        <footer id="frog">
-            <embed>
+        <footer class="frog">
+            <img id="frog" src="./reso/no wendesday yet.gif" alt="It is not wendesday yet my dudes">
         </footer>
+        <script src="./main.js"></script>
     </body>
 </html>
