add projects to github and made links

--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
         <section id="projects">
             <h2>Projects</h2>
             <ul>
-                <li>The Coffee Sippers</li>
-                <li>kool kidz club</li>
+                <li><a href="https://github.com/Gmike47/The-Coffee-Sippers" target="_blank" title="Click to view the code">The Coffee Sippers</a></li>
+                <li><a href="https://github.com/Gmike47/Kool-Kidz-club" target="_blank" title="Click to view the code">kool kidz club</a></li>
             </ul>
         </section>
         <section id="skillz">
