--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
         <section id="projects">
             <h2>Projects</h2>
             <ul>
-                <li><a href="https://github.com/Gmike47/The-Coffee-Sippers" target="_blank" title="Click to view the code">The Coffee Sippers</a></li>
-                <li><a href="https://github.com/Gmike47/Kool-Kidz-club" target="_blank" title="Click to view the code">kool kidz club</a></li>
+                <li><a href="https://github.com/Gmike47" target="_blank" title="Click to view my git hub">my github profile</a></li>
+                <li><a href="https://regal-hummingbird-b83a95.netlify.app/" target="_blank" title="check out my reddit view website">Reddit view finder</a></li>
             </ul>
         </section>
         <section id="skillz">
