fix copy to clipboard message

--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,7 @@
         <link href="./style.css" rel="stylesheet">
     </head>
     <body>
+    <script src="./javascript.js"></script>
         <header>
             <h1>GMike47</h1>
             <ul class="nav">
@@ -17,7 +18,7 @@
         <footer id="contact">
             <h2>Contact Me</h2>
             <img onclick = copyToClipboard() class="mail" src="./reso/kindpng_498418.png" title="click here to get my mail" alt="Email me  @gmail.com">
+            <p class='message' style="display: none;">e-mail copied!</p>
         </footer>
-        <script src="./javascript.js"></script>
     </body>
 </html>
