add jamming project and update css

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
             <ul>
                 <li><a href="https://github.com/Gmike47" target="_blank" title="Click to view my git hub">my github profile</a></li>
                 <li><a href="https://regal-hummingbird-b83a95.netlify.app/" target="_blank" title="check out my reddit view website">Reddit view finder</a></li>
+                <li><a href="https://sparkling-malabi-a1817c.netlify.app/" target="_blank" title="check out my Spotify playlist App" >Jammming project</a></li>
             </ul>
         </section>
         <section id="skillz">
@@ -37,6 +38,7 @@
                 <img src="./reso/javascript_logo_icon_145155.png" alt="javascript">
                 <img src="./reso/768px-Python_icon_(black_and_white).svg.png" alt="python">
                 <img src="./reso/toppng.com-github-logo-transparent-512x512.png" alt="github">
+                <img src="./reso/reacticon.png" alt="react">
             </div>
         </section>
         <footer class="frog">
