add titles to skillz

--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@
         <section id="skillz">
             <h2>skills</h2>
             <div class="set">
-                <img src="./reso/kindpng_html.png" alt="html">
-                <img src="./reso/pngwing.com css.png" alt="css">
-                <img src="./reso/javascript_logo_icon_145155.png" alt="javascript">
-                <img src="./reso/768px-Python_icon_(black_and_white).svg.png" alt="python">
-                <img src="./reso/toppng.com-github-logo-transparent-512x512.png" alt="github">
-                <img src="./reso/reacticon.png" alt="react">
+                <img src="./reso/kindpng_html.png" alt="html" title="html">
+                <img src="./reso/pngwing.com css.png" alt="css" title="css">
+                <img src="./reso/javascript_logo_icon_145155.png" alt="javascript" title="javascript">
+                <img src="./reso/768px-Python_icon_(black_and_white).svg.png" alt="python" title="python">
+                <img src="./reso/toppng.com-github-logo-transparent-512x512.png" alt="github" title="github">
+                <img src="./reso/reacticon.png" alt="react" title="react">
             </div>
         </section>
         <footer class="frog">
